20130127 machines/spec_se.c: fix SE writing dock and exrom pages to snapshots
         (Fred).
20130127 lib/{compressed/tape_se.szx,uncompressed/tape_se.szx},man/fuse.1,
         roms/{README.copyright,se-0.rom,se-1.rom},tape.c: update SE ROMs to
         v4.04 (Fred).
20130128 peripherals/disk/{beta.c,disciple.c,opus.c,plusd.c},
         peripherals/ide/divide.c,peripherals/{if1.c,if2.c,scld.c,speccyboot.c,
         spectranet.c}: make sure that an associated peripheral is enabled
         before running it's associated memory_map function (bug #276) (Fred).
20130128 peripherals/nic/w5100_socket.c: ensure we don't read bogus data on
         UDP writes (bug #271).
20130130 spectrum.c: changes to keep +2A/+3 contention correct after
         libspectrum timing changes in r4866 (Fuse part of patch #305).
20130131 man/fuse.1: document the Poke Memory dialog (Sergio).
20130131 man/fuse.1: fix bad syntax in the Fuse Movie File section. Add missing
         space before TS2068 machine (Sergio).
20130203 peripherals/disk/{beta.c,disciple.c,opus.c,plusd.c},
         peripherals/ide/divide.c,peripherals/{if1.c,if2.c,scld.c,speccyboot.c,
         spectranet.c}: revert fix to bug #273, ensure that interfaces are
         disabled in the reset function unless the peripheral is enabled
         (bug #276 #278) (thanks, Stuart Brady) (Fred).
20130203 peripherals/nic/w5100_socket.c: remove data races (patch #306) (thanks,
         Alberto Garcia and helgrind).
20130211 peripherals/disk/disciple.c: fix typo in comment documenting port
         decoding at the single bit level (Stuart).
20130212 peripherals/disk/{disciple.c,opus.c,plusd.c}: revert further changes
         made when reverting the fix to bug #273, causing the Opus Discovery
         to be left paged in after a reset and +D/DISCiPLE to be left paged in
         if loading of the interface's ROM fails (bug #284) Stuart).
20130212 ChangeLog: document limitations of the DISCiPLE emulation (bug #285)
         (Stuart).