@@ -2748,7 +2748,7 @@ A +3 with modified ROMs allowing access to IDE hard disks via the
 simple 8-bit interface, as activated from the
 .I "Options, Disk Peripherals"
 dialog. See
-.I "http://www.zxplus3e.plus.com/"
+.I "http://www.worldofspectrum.org/zxplus3e/"
 for more details.
 .RE
 .PP
@@ -4433,7 +4433,7 @@ For reading:
 Ultra Disk Image; for specification please see
 .I http://scratchpad.wikia.com/wiki/Spectrum_emulator_file_format:_udi
 or
-.I http://zxmak.narod.ru/docs.htm
+.I http://zxmak.chat.ru/docs.htm
 .PP
 This is the only image format which can store all the relevant information
 of the recorded data on a magnetic disk, so it can be used for any
@@ -4463,7 +4463,7 @@ Note that SAM Coup\('e `.DSK' images share the same format as `.MGT'.
 .I .TRD
 .RS
 TR-DOS disk image; for detailed information please see
-.I http://www.retroplay.com/Mecenate/ramsoft/tr\-info.zip
+.I http://web.archive.org/web/20070808150548/http://www.ramsoft.bbk.org/tech/tr\-info.zip
 .RE
 .PP
 .I .SCL
@@ -4475,7 +4475,7 @@ A simple archive format for TR-DOS disk files.
 .RS
 Teledisk image format; Fuse supports only files which do not use the
 \(lqAdvanced Compression\(rq option. Detailed description found in
-.I http://www.classiccmp.org/dunfield/img/td0notes.txt
+.I http://www.classiccmp.org/dunfield/img54306/td0notes.txt
 and
 .I http://www.fpns.net/willy/wteledsk.htm
 .RE
@@ -4488,7 +4488,7 @@ extended CPC format too. Further information please see the
 section and the CPCEMU manual section 7.7.1
 .I http://www.cpc\-emu.org/linux/cpcemu_e.txt
 or the
-.I http://www.kjthacker.f2s.com/docs/extdsk.html
+.I http://www.cpctech.org.uk/docs/extdsk.html
 .RE
 .PP
 .I .OPD
