@@ -12,7 +12,7 @@ Public License along with this module; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place, Suite 330, Boston, MA 02111-1307 USA
 
 Original C++ source:
- Blip_Buffer 0.4.0. http:www.slack.net/~ant/
+ Blip_Buffer 0.4.0. http://www.slack.net/~ant/
 
 partially reimplemented in C by Gergely Szasz for FUSE
 
