@@ -4,7 +4,7 @@
  Blip_Buffer 0.4.0
 
 Original C++ source:
-Blip_Buffer 0.4.0. http:www.slack.net/~ant/
+Blip_Buffer 0.4.0. http://www.slack.net/~ant/
 
 Copyright (C) 2003-2006 Shay Green. This module is free software; you
 can redistribute it and/or modify it under the terms of the GNU Lesser
